--- a/Boss Room Extended/Assets/External Assets/KinematicCharacterController/KinematicCharacterController.asmdef
+++ b/Boss Room Extended/Assets/External Assets/KinematicCharacterController/KinematicCharacterController.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "KinematicCharacterController",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:3b8ed52f1b5c64994af4c4e0aa4b6c4b"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
